force-app/main/default/objects/Opportunity/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antiguedad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>