force-app/main/default/objects/Opportunity/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <label>Campaña</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Back to School</fullName>
            </value>
            <value>
                <fullName>Black Friday</fullName>
            </value>
            <value>
                <fullName>Cierre de Año</fullName>
            </value>
            <value>
                <fullName>Día de la Madre</fullName>
            </value>
            <value>
                <fullName>Día del Niño</fullName>
            </value>
            <value>
                <fullName>Día del Padre</fullName>
            </value>
            <value>
                <fullName>Navidad</fullName>
            </value>
            <value>
                <fullName>Primera Compra</fullName>
            </value>
            <value>
                <fullName>Programa Anual</fullName>
            </value>
            <value>
                <fullName>Reposición</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
                <label>Temporada de Hogar</label>
            </value>
            <value>
                <fullName>Temporada de Jardín</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>