force-app/main/default/objects/Opportunity/fields/Catalogo__c.field-meta.xml
<CustomField>
    <fullName>Catalogo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Catálogo a partir del cual se generó esta cotización</description>
    <label>Catalogo</label>
    <referenceTo>Catalogo__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>