force-app/main/default/objects/Opportunity/fields/Costo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Costo_Estimado__c</fullName>
    <label>Costo Estimado</label>
    <summarizedField>OpportunityLineItem.Costo_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>