force-app/main/default/objects/Opportunity/fields/CostoDeDescargaEnDestino__c.field-meta.xml
<CustomField>
    <fullName>CostoDeDescargaEnDestino__c</fullName>
    <label>Costo de descarga en destino</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>