force-app/main/default/objects/Opportunity/fields/CostoDeNacionalizacion__c.field-meta.xml
<CustomField>
    <fullName>CostoDeNacionalizacion__c</fullName>
    <label>Costo de nacionalizacion</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>