force-app/main/default/objects/Opportunity/fields/CostoDeSeguroDeEnvio__c.field-meta.xml
<CustomField>
    <fullName>CostoDeSeguroDeEnvio__c</fullName>
    <label>Costo de seguro de envio</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>