force-app/main/default/objects/Opportunity/fields/CostoDeTransporteAlAlmacenDelCliente__c.field-meta.xml
<CustomField>
    <fullName>CostoDeTransporteAlAlmacenDelCliente__c</fullName>
    <label>Costo de transporte al almacen del cli</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>