force-app/main/default/objects/Opportunity/fields/CostoFOB__c.field-meta.xml
<CustomField>
    <fullName>CostoFOB__c</fullName>
    <label>Costo FOB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>