force-app/main/default/objects/Opportunity/fields/CostoTransporte__c.field-meta.xml
<CustomField>
    <fullName>CostoTransporte__c</fullName>
    <label>Costo transporte</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>