force-app/main/default/objects/Opportunity/fields/Expectativa_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Expectativa_Oportunidad__c</fullName>
    <inlineHelpText>Importe en dólares que se espera conseguir al ganar la Oportunidad</inlineHelpText>
    <label>Expectativa Oportunidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>