force-app/main/default/objects/Opportunity/fields/Fecha_de_Compromiso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Compromiso__c</fullName>
    <description>Fecha de compromiso con el cliente (obligatorio antes de enviar para estudio)</description>
    <label>Fecha de Compromiso de Entrega</label>
    <type>Date</type>
</CustomField>