force-app/main/default/objects/Opportunity/fields/Fecha_seguimiento_Reposicion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_seguimiento_Reposicion__c</fullName>
    <description>Fecha en la cual quiere que hacer el seguimiento de reposicion</description>
    <inlineHelpText>Fecha en la cual quiere que hacer el seguimiento de reposicion</inlineHelpText>
    <label>Fecha seguimiento de Reposición</label>
    <type>Date</type>
</CustomField>