force-app/main/default/objects/Opportunity/fields/hasOrder__c.field-meta.xml
<CustomField>
    <fullName>hasOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if there is an order associated to current opportunity</description>
    <label>hasOrder</label>
    <type>Checkbox</type>
</CustomField>