force-app/main/default/objects/Opportunity/fields/Id_de_aportacion_comercial__c.field-meta.xml
<CustomField>
    <fullName>Id_de_aportacion_comercial__c</fullName>
    <label>Id de aportación comercial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>