force-app/main/default/objects/Opportunity/fields/IdVenta__c.field-meta.xml
<CustomField>
    <fullName>IdVenta__c</fullName>
    <label>Id Venta</label>
    <length>18</length>
    <type>Text</type>
</CustomField>