force-app/main/default/objects/Opportunity/fields/Imp_Neto_Previsto__c.field-meta.xml
<CustomField>
    <fullName>Imp_Neto_Previsto__c</fullName>
    <formula>IF( Importe_Neto2__c  == 0,
  IF(Amount &lt; 0,
    Amount,
    Amount * (1 - ( PlanificacionComercial__r.PorcentajeAportaciones__c + 
         PlanificacionComercial__r.PorcentajeConvenio__c))
  ),
  Importe_Neto2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Venta Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>