force-app/main/default/objects/Opportunity/fields/Importe_Margen_Neto__c.field-meta.xml
<CustomField>
    <fullName>Importe_Margen_Neto__c</fullName>
    <formula>Imp_Neto_Previsto__c * Margen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Margen Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>