force-app/main/default/objects/Opportunity/fields/Importe_Neto2__c.field-meta.xml
<CustomField>
    <fullName>Importe_Neto2__c</fullName>
    <description>Resumen de Importe Neto de Productos de Oportunidad</description>
    <inlineHelpText>Resumen de Importe Neto de Productos de Oportunidad</inlineHelpText>
    <label>Importe Neto</label>
    <summarizedField>OpportunityLineItem.Importe_Neto__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>