force-app/main/default/objects/Opportunity/fields/Is_Brand_Selected__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Selected__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Cuando se recibe una oportunidad del catalogo, los productos de oportunidad aun no tienen seleccioanda una marca (Is_Brand_Selected=false). Cuando la marca es seleciconada (modificar productos en oportunidad) esta bandera se activa. (Is_Brand_Selected = true)</description>
    <label>Marca seleciconada</label>
    <type>Checkbox</type>
</CustomField>