force-app/main/default/objects/Opportunity/fields/Is_Split_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Split_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esta bandera sirve para determinar si se aplica la regla de validacion &quot;Modificacion_de_oportunidad_con_pedido&quot; al modifica la oportunidad o no. Cuando la oportunidad se cierra parcialmente NO se debe aplicar la regla de validacion.</description>
    <label>Is Split Flag</label>
    <type>Checkbox</type>
</CustomField>