force-app/main/default/objects/Opportunity/fields/Link_a_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Link_a_Cotizacion__c</fullName>
    <formula>IF(ISBLANK( URL_Cotizacion__c ),
&apos;-- No se ha cotizado --&apos;,
HYPERLINK(URL_Cotizacion__c, &apos;Cotización en XLS&apos; , &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link a Cotización</label>
    <type>Text</type>
</CustomField>