force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <inlineHelpText>Solo aplica si la oportunidad se marca como &quot;Cerrada/Perdida&quot;</inlineHelpText>
    <label>Motivo por el cual se perdió</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
                <label>Lo ganó un Competidor</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <label>El Cliente no lo seleccionó finalmente</label>
            </value>
            <value>
                <fullName>Logistic Problem</fullName>
                <label>Problema Logístico</label>
            </value>
            <value>
                <fullName>Target Price</fullName>
                <label>Precio Objetivo no conseguido</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>