force-app/main/default/objects/Opportunity/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <formula>IF ( ( Importe_Neto2__c  - Costo_Estimado__c) = 0 || Importe_Neto2__c = 0 ,
0 ,
( Importe_Neto2__c  - Costo_Estimado__c) / Importe_Neto2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Neto (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>