force-app/main/default/objects/Opportunity/fields/NumeroDeProductos__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeProductos__c</fullName>
    <description>Calcula el número de productos de la oportunidad.</description>
    <label>Número de productos</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>