force-app/main/default/objects/Opportunity/fields/Opportunidad_catalogo__c.field-meta.xml
<CustomField>
    <fullName>Opportunidad_catalogo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oportunidades creadas desde el catalogo en linea</description>
    <label>Opportunidad de catálogo</label>
    <type>Checkbox</type>
</CustomField>