force-app/main/default/objects/Opportunity/fields/Planificacion_Comercial_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Planificacion_Comercial_Nombre__c</fullName>
    <formula>PlanificacionComercial__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planificacion Comercial Nombre</label>
    <type>Text</type>
</CustomField>