force-app/main/default/objects/Opportunity/fields/PlanificacionComercial__c.field-meta.xml
<CustomField>
    <fullName>PlanificacionComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planificación comercial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PlanificacionComercial__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CloseDate</field>
            <operation>greaterOrEqual</operation>
            <valueField>PlanificacionComercial__c.Inicio__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CloseDate</field>
            <operation>lessOrEqual</operation>
            <valueField>PlanificacionComercial__c.Fin__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PlanificacionComercial__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>