force-app/main/default/objects/Opportunity/fields/PorcentajeAportacionesComerciales__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeAportacionesComerciales__c</fullName>
    <label>Porcentaje de aportaciones comerciales</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>