force-app/main/default/objects/Opportunity/fields/Productos_No_Validos__c.field-meta.xml
<CustomField>
    <fullName>Productos_No_Validos__c</fullName>
    <description>Productos sin pricebook o inactivos</description>
    <label>Productos No Validos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>