force-app/main/default/objects/Opportunity/fields/ProductosQueRequierenPackagingNuevo__c.field-meta.xml
<CustomField>
    <fullName>ProductosQueRequierenPackagingNuevo__c</fullName>
    <label>Productos que requieren packaging nuevo</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.RequierePackagingNuevo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>