force-app/main/default/objects/Opportunity/fields/RequierePackaging__c.field-meta.xml
<CustomField>
    <fullName>RequierePackaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere packaging</label>
    <type>Checkbox</type>
</CustomField>