force-app/main/default/objects/Opportunity/fields/Responsable_de_compras__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_compras__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de compras</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>