force-app/main/default/objects/Opportunity/fields/Seguimiento_de_Reposici_n__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento_de_Reposici_n__c</fullName>
    <label>Seguimiento de Reposición</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>