force-app/main/default/objects/Opportunity/fields/SumaDeCantidadesDeProductos__c.field-meta.xml
<CustomField>
    <fullName>SumaDeCantidadesDeProductos__c</fullName>
    <description>Suma de la cantidad de producto de todos los productos de la oportunidad.</description>
    <label>Suma de cantidades de productos</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>