force-app/main/default/objects/Opportunity/fields/URL_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>URL_Cotizacion__c</fullName>
    <label>Cotizacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>