force-app/main/default/objects/Opportunity/fields/urls_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>urls_cotizacion__c</fullName>
    <label>Links a cotización</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>