force-app/main/default/objects/Opportunity/listViews/Oportunidades_2019.listView-meta.xml
<ListView>
    <fullName>Oportunidades_2019</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Antiguedad__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Importe_Neto2__c</columns>
    <columns>OPPORTUNITY.FISCAL_YEAR</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.FISCAL_YEAR</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>Opportunities 2019</label>
</ListView>