force-app/main/default/objects/Opportunity/listViews/Todas_las_Oportunidades.listView-meta.xml
<ListView>
    <fullName>Todas_las_Oportunidades</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Antiguedad__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Importe_Neto2__c</columns>
    <columns>OPPORTUNITY.FISCAL_YEAR</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.FISCAL_YEAR</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>Opportunities 2018</label>
</ListView>