force-app/main/default/objects/Opportunity/listViews/X2022_Todas_las_Oportunidades.listView-meta.xml
<ListView>
    <fullName>X2022_Todas_las_Oportunidades</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Imp_Neto_Previsto__c</columns>
    <columns>Margen__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PlanificacionComercial__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Cardenal,Benavides,Cuellar,Bernardo,Blanco,Meza</value>
    </filters>
    <label>Opportunities 2022</label>
</ListView>