force-app/main/default/objects/Opportunity/listViews/X2024_Todas_las_Oportunidades.listView-meta.xml
<ListView>
    <fullName>X2024_Todas_las_Oportunidades</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Imp_Neto_Previsto__c</columns>
    <columns>Margen__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PlanificacionComercial__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <label>Opportunities 2024</label>
</ListView>