force-app/main/default/objects/Opportunity/listViews/X2027_Todas_las_Oportunidades_MIGUEL.listView-meta.xml
<ListView>
    <fullName>X2027_Todas_las_Oportunidades_MIGUEL</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AGE_IN_DAYS</columns>
    <columns>Imp_Neto_Previsto__c</columns>
    <columns>Margen__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PlanificacionComercial__c</field>
        <operation>equals</operation>
        <value>2027</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>MIGUEL</value>
    </filters>
    <label>2027 - All Opportunities MIGUEL</label>
</ListView>